crates/compiler/src/snapshots/compiler__tokenizer__test__raw_text-2.snap
---
source: crates/compiler/src/tokenizer.rs
expression: t

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- Text:
    raw: "</styl"
    ops:
      bits: 0

