crates/compiler/src/snapshots/compiler__tokenizer__test__raw_text-3.snap
---
source: crates/compiler/src/tokenizer.rs
expression: t

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- Text:
    raw: "</styles"
    ops:
      bits: 0

