crates/compiler/src/snapshots/compiler__tokenizer__test__raw_text-5.snap
---
source: crates/compiler/src/tokenizer.rs
expression: t

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- EndTag: style

