crates/compiler/src/snapshots/compiler__tokenizer__test__raw_text-6.snap
---
source: crates/compiler/src/tokenizer.rs
expression: t

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- Text:
    raw: abc
    ops:
      bits: 0
- EndTag: style

